--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -29,8 +29,8 @@ a{
     width:100vw;
     height: 60vw;
     position:relative;
-    background:radial-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.9)),
-        url(../svg/parked.png) no-repeat center center/cover;
+    background:radial-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.7)),
+        url(../svg/parktrees.jpg) no-repeat center center/cover;
 }
 
 .header-container::after{
